# open-physical-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  pyproject.toml
.github/workflows/: unit-tests.yml
assets/CADs/: cup_blue.usd  cup_pink.usd
assets/franka_panda/: franka_panda_arm_v2.usd
assets/franka_panda/franka/: franka.usd
assets/franka_panda/franka/configuration/: franka_physics.usd
assets/franka_panda/franka_panda_umi/: franka_panda_umi.usd
assets/franka_panda/franka_panda_umi/configuration/: franka_panda_umi_base.usd  franka_panda_umi_physics.usd
docs/: architectural-design-doc.md  calibration-workflow.md  gopro-support.md  session-design-outline.md
scripts/: generate_data.py  motion_plan.py  run_isaacsim_eval.py  teleop_controller.py
scripts/registry/: dining_room_registry.py  kitchen_registry.py  living_room_registry.py
src/opai/: __init__.py
src/opai/application/: __init__.py  calibration.py  gopro.py  imu.py  session.py  slam.py
src/opai/core/: __init__.py  exceptions.py
src/opai/domain/: __init__.py  calibration.py  context.py  gopro.py  grid.py  imu.py  plot.py  session.py  slam.py
src/opai/infrastructure/: __init__.py  context_store.py  docker.py  logger.py  persistence.py  video.py
src/opai/presentation/: __init__.py  facade.py
src/voilab/: cli.py
tests/: conftest.py  test_calibration.py  test_charuco.py  test_context_store.py  test_docker.py  test_facade.py  test_gopro.py  test_imu.py  test_logger.py  test_mapping.py
